--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=2425-spring-boot-playground
 server.port=8081
+spring.h2.console.enabled=false
+playground.generate.data=true
